# dependency-injection

./: README.md  pyproject.toml
dependency_injection/: __init__.py  container.py  core.py  core.pyi  errors.py  instantiator.py  models.py  provider.py  type_checking.py  types_match.py  utils.py  validate_containers.py
examples/: flask.py
tests/: helpers.py  test_container.py  test_core_async.py  test_core_sync.py  test_scope.py  test_type_cheching.py  test_type_checking.py
