[tool.poetry]
name = "dependency-injection-proto"
version = "0.0.1"
description = "Prototype of fancy Dependency Injection library for Python"
authors = ["Daniel Daniels <danields761@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
isort = "^5.8.0"
pytest-aiohttp = "^0.3.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
